tests/kubernetes/custom-2.1.2/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-2.1.2-compliant
policies:
  - ../../../../policies/kubernetes/control-plane/custom-2.1.2.yaml
resources:
  - configmap.yaml
results:
  - policy: custom-2-1-2-ensure-audit-logs-collected
    rule: check-audit-log-collection
    resources:
      - compliant-cm
    kind: ConfigMap
    result: pass
